kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    spec.ingressClassName: traefik
  labels:
    app: frontend
  name: frontend-ingress
  namespace: default
spec:
  rules:
  - host: o6men.site  # Домен, на который будет приходить запрос
    http:
      paths:
      - path: /
        pathType: Prefix  # Будет обрабатывать все пути, начинающиеся с '/'
        backend:
          service:
            name: frontend-service  # Имя сервиса из frontend-deployment.yaml
            port:
              number: 80  # Порт, на который нужно направлять трафик
      - path: /api/  # Путь, который будет обрабатывать backend
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service  # Имя backend-сервиса
            port:
              number: 8000  # Порт, на котором работает backend

  tls:
  - hosts:
    - o6men.site  # Домен для TLS-сертификата
    secretName: o6men-site-tls  # Название секрета для хранения SSL-сертификата
